# pdrtpy

./: .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGES.md  CITATION.md  CLAUDE.md  CODE_OF_CONDUCT.md  Debug.ipynb  MANIFEST.in  MakeFakeData.ipynb  ModelSetTest.ipynb  README.rst  atomic_constants.tab  chisq.fits  codemeta.json  current_models.tab  h2excitation.py  kosmatau_models.tab  lineratiofit.py  make_model_webpages.py  measurement.py  modelratiodata.py  modelset.py  pdrutils.py  perf_optimization_session_2026-03-06.md  plot.py  pyproject.toml  rcw49.ipynb  requirements-dev.txt  requirements.txt  roadmap.md  setup.py  smc_models.tab  tool.py  toolbox.py
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  run-examples.yml  run-integration-tests.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst  pdrtpy.measurement.rst  pdrtpy.modelset.rst  pdrtpy.molecule.rst  pdrtpy.pdrutils.rst  pdrtpy.plot.rst  pdrtpy.rst  pdrtpy.test.rst  pdrtpy.tool.rst  pdrtpy.utils.rst  plotkeywords.rst
examples/: README.rst  emcee.py  emceefit.py  h2opr.py  mapfitting.py  modelset.py  singlepixelfitting.py
goals/: clean_up_excitation.md  clean_up_meas.md  clean_up_plot.md  excitation_fit_test.md  exfit_upgrade.md  exfit_upgrade_summary.md  fix_explore.md  lmfit_sparse_jac_bug.md  lrf_optimization.html  pdrutils.md  performance.md  regularization.md
models/: ciciweb.fits  cico21web.fits  cicoweb.fits  co10954web.fits  co2110web.fits  co3210web.fits  co3221web.fits  co4321web.fits  co65web.fits  co7610web.fits  co7610webpth.fits  co7621web.fits  co76web.fits  cpweb.fits  feii26z1web.fits  feii26z3web.fits  firweb.fits  h200s1siiiz3web.fits  h200s1z1web.fits  h200s2z3web.fits  h200s3s1z1web.fits  h200s3z1web.fits  h200s3z1webpth.fits  h264q110s1z3web.fits  o145ciiweb.fits  o145ciiwebpth.fits  oi145web.fits  oicpweb.kosmatau.fits
models/wolfirekaufman/version2006/constant_extinction/smc/: models.tab  oicpwebsmc.fits
models/wolfirekaufman/version2006/constant_extinction/z=1/: co131254web.fits  co6510web.fits  co6521web.fits  co7654web.fits  coweb.fits  h200s1siiiz1web.fits  h200s2siiiz1web.fits  models.tab  siii35feii26z1web.fits
models/wolfirekaufman/version2006/constant_extinction/z=3/: models.tab  siii35feii26z3web.fits
models/wolfirekaufman/version2006/constant_thermal_pressure/z=1/: cicowebpth.fits  ciici609webpth.fits  models.tab
models/wolfirekaufman/version2020/constant_extinction/z=1/: CII158.fits  OI63_CII158.fits
notebooks/: PDRT_Example_Find_n_G0.ipynb  PDRT_Example_Find_n_G0_Single_Pixel.ipynb  PDRT_Example_Make_n_G0_maps.ipynb  PDRT_Example_Measurements.ipynb
pdrtpy/: __init__.py  h2excitation.py  lineratiofit.py  measurement.py  modelset.py  molecule.py  pbar.py  pdrutils.py  plot.py  tool.py
pdrtpy/models/: dotar
pdrtpy/models/kosmatau/WD01-7/clumpy/M=100,z=1/: CI609_CO43.fits  CI609_CO65.fits  CI609_FIR.fits  CII158_CO21.fits  CII158_CO43.fits  CII158_CO54.fits  CII158_CO65.fits  CO109_CO54.fits  CO1312_CO65.fits  CO32_CO10.fits  CO32_CO21.fits  CO43_CO10.fits  CO43_CO21.fits  CO65_CO10.fits  CO65_CO21.fits  CO76_CO10.fits  CO76_CO65.fits  CO87_CO54.fits  CO98_CO65.fits  FIR.fits  OI145_CII158.fits  OI145_OI63.fits  ci609firweb.fits  ciciweb.fits  cico21web.fits  cico32web.fits  cico43web.fits  cico54web.fits  cico65web.fits  cicoweb.fits  ciici609web.fits  (+41 more)
pdrtpy/models/kosmatau/versionX/z=1/: models.tab
pdrtpy/plot/: __init__.py  excitationplot.py  h2excitationplot.py  lineratioplot.py  modelplot.py  plotbase.py
pdrtpy/plot/test/: test_modelplot.py  test_plot_bugs.py  test_plot_comprehensive.py  test_plotting.py
pdrtpy/tables/: 13c18o_transition.tab  13co_transition.tab  BarklemCollet2016_partition_functions.txt  CH_p_transition.tab  PartFun_12C16O.tab  PartFun_12C17O.tab  PartFun_12C18O.tab  PartFun_13C16O.tab  PartFun_13C18O.tab  PartFun_13CH_p.tab  PartFun_CH_p.tab  PartFun_H2.tab  Partfun_12C16O.txt  Partfun_H2.txt  README.md  RoueffEtAl.tab  RoueffEtAlReadMe  all_models.tab  atomic_constants.tab  av.tab  c18o_transition.tab  getpartfun.py  measurement_example1.tab  measurement_example2.tab  rewriteMeudon.py  rewriteRoueff.py  template_transition.tab
pdrtpy/tables/meudon/Lines/: aeinconvert.pro  aquadh2.dat_roeuff  forprint.prt~
pdrtpy/test/: test_ajpaper.py  test_fitmap.py  test_measurement.py  test_modelset.py  test_molecule.py  test_pdrutils.py
pdrtpy/testdata/: ConvP_S1.fits  H200S1_CenA.fits  H200S2_CenA.fits  H200S3_CenA.fits  H200S4_CenA.fits  H200S5_CenA.fits  H200S6_CenA.fits  H200S7_CenA.fits  H200S8_CenA.fits  Horsehead_12CO_measurement.fits  Horsehead_13CO_measurement.fits  Horsehead_CII_measurement.fits  Horsehead_FIR_measurement.fits  Kaplan+2021.tab  apjac0899t2_mrt.txt  draco.ico.fits  excitation_13co_1comp_joblin2018.json  excitation_chp_1comp_bar_zanesse2025.json  excitation_chp_1comp_disk_zanesse2025.json  excitation_co_1comp_joblin2018.json  excitation_co_2comp_joblin2018.json  n22_FIR.fits  n22_cii_error.fits  n22_cii_flux.fits  n22_oi_error.fits  n22_oi_flux.fits  neufeld_apj_2009_649_816.tab
pdrtpy/tool/: __init__.py  excitation.py  fitmap.py  h2excitation.py  lineratiofit.py  testh2fit.py  testpiecewise.py  toolbase.py
pdrtpy/tool/ilane/: 12co_transition_v10.tab  12co_transition_v21.tab  13co_transition_v10.tab  CHp_excitation_table.tab  chpexcitation.py  co13_10excitation.py  co21excitation.py  coexcitation.py  partition.py
pdrtpy/tool/test/: __test_h2_fit.py  __test_piecewise.py  excitation_test_utils.py  test_against_scipy.py  test_coexcitation.py  test_excitation_unified.py  test_fitmap.py  test_h2excitation.py  test_lineratiofit.py
pdrtpy/utils/: __init__.py  fits.py  helpers.py  paths.py  units.py  wcs.py
scripts/: addcol.py  bench_excitation_ref_master.npz  benchmark_excitationfit.py  benchmark_lineratiofit.py  distribute.py  emissivity.py  findmissing.csh  models_template.tab  removecol.py  tabrow.py
tables/: all_models.tab
testdata/: draco.ico.fits  n22_FIR.fits  n22_cii_error.fits  n22_cii_flux.fits  n22_oi_error.fits  n22_oi_flux.fits
(+6957 files in other folders)
