[project]
name = "pdrtpy"
description = 'PhotoDissociation Region Toolbox (PDRT), astrophysics analysis tools'
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = []
dynamic = ["version"]
authors = [
  { name = "Marc Pound", email = "mpound@umd.edu" },
  { name = "Mark Wolfire", email = "mwolfire@umd.edu" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Intended Audience :: Science/Research",
]
dependencies = [
    'astropy',
    'numpy<2.0',
    'scipy',
    'matplotlib',
    'lmfit',
    'numdifftools',
    'emcee',
    'corner',
    'mpl-interactions',
    'mpl-interactions[jupyter]',
    'pandas',
    'tqdm',
 ]

[project.optional-dependencies]
dev = [
  "coverage[toml]",
  "coverage-badge",
  "pip-tools",
  "pre-commit",
  "ipdb",
  "flake8",
  "numpydoc",
  "pytest",
  "pytest-cov",
  "myst_nb",
  "sphinx",
  "sphinx-autobuild",
  "sphinx-inline-tabs",
  "sphinx-book-theme",
  "sphinxcontrib-mermaid",
]
nb = [
  "jupyter",
  "jupyterlab",
]
all = ["pdrtpy[dev,nb]"]

[project.urls]
Documentation = "https://pdrtpy.readthedocs.io"
Source =  "https://github.com/mpound/pdrtpy"
Issues =  "https://github.com/mpound/pdrtpy/issues"

[project.scripts]

[tool.hatch.version]
path = "pdrtpy/__init__.py"

[tool.hatch.envs.default]
# By default hatch will effectively do $ pip install dysh[all]
features = ["all"]

# run via: $ hatch run <script>
[tool.hatch.envs.default.scripts]
test = "pytest {args}"
lint = "ruff check . {args}"
lint-all = "ruff check --select ALL {args}"
lint-fix = "ruff check --select ALL --fix {args}"
# hatch run docs serves on localhost:8000
docs = "sphinx-autobuild {root}/docs/source {root}/docs/build -b html {args}"
# hatch run docs-build writes static output
docs-build = "sphinx-build {root}/docs/source {root}/docs/build -b html {args}"

[tool.hatch.envs.test]

# run via: $ hatch run test:<script>
[tool.hatch.envs.test.scripts]
matrix = "pytest {args}"
cov = "pytest --cov-report=xml --cov-config=pyproject.toml --cov=pdrtpy --cov=tests {args}"

# Run tests across all supported version of Python
[[tool.hatch.envs.test.matrix]]
python = ["39", "310", "311"]

[tool.hatch.build.targets.sdist]
include = ["/pdrtpy", "/tests", "/bin"]
exclude = [
  "/.github",
  "/.gitignore",
  "*.swp",
  "/attic",
  "/build",
  "/docs",
  "/dist",
  "/notebooks",
]

[tool.hatch.build.targets.wheel]
packages = ["pdrtpy"]

[tool.coverage.run]

branch = true
source = [
  "pdrtpy/"
]
parallel = true
omit = [
  "*/tests/*",
  "test_*.py"
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.isort]
# See: https://pycqa.github.io/isort/docs/configuration/options/#example-pyprojecttoml
profile = "black"
combine_as_imports = true
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
filter_files = true

[tool.black]
preview = true
line-length = 120

[tool.pyright]
reportImplicitStringConcatenation = false
[tool.ruff]
select = [
  "F",    # https://beta.ruff.rs/docs/rules/#pyflakes-f
  "E",    # https://beta.ruff.rs/docs/rules/#error-e
  "W",    # https://beta.ruff.rs/docs/rules/#warning-w
  "B",    # https://beta.ruff.rs/docs/rules/#flake8-bugbear-b
  "I",    # https://beta.ruff.rs/docs/rules/#isort-i
  "NPY",  # https://beta.ruff.rs/docs/rules/#numpy-specific-rules-npy
  "PD",   # https://beta.ruff.rs/docs/rules/#pandas-vet-pd
  "RUF",  # https://beta.ruff.rs/docs/rules/#ruff-specific-rules-ruf
]
fixable = ["ALL"]
unfixable = ["B"]
ignore = [
  "E741",  # ambiguous-variable-name
]
line-length = 120
src = ["pdrtpy"]#, "notebooks"]

[tool.ruff.per-file-ignores]
# Ignore  in all `__init__.py` files
"__init__.py" = ["E402", "F405", "F403"]
"**/{tests,docs}/*" = ["E402", "B011"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests", "pdrtpy", "docs"]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.pip-tools]
src_files = ["pyproject.toml"]
extra = ["nb", "dev"]
resolver = "backtracking"
output_file= "requirements.txt"
no_strip_extras = true
quiet = true
no_emit_trusted_host = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
